<resources>
    <string name="app_name">Trocas e Barganhas</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">1421246887903651</string>
    <string name="title_activity_home">Início</string>
    <string name="btn_search_label">Pesquisar</string>
    <string name="btn_advertise">Anunciar</string>
    <string name="btn_my_ads">Meus Anúncios</string>
    <string name="tv_search_terms_hint">O que está procurando?</string>
    <string name="tv_my_points_label">Minha classificação:</string>
    <string name="tv_search_terms_label">Exibindo resultados da pesquisa por:</string>
    <string name="tv_no_results_label">Nenhum resultado encontrado para:</string>
    <string name="tv_trending_ads_label">Anúncios em alta:</string>
    <string name="tv_event_ads_label">Próximos eventos:</string>
    <string name="tv_commerce_ads_label">Comerciantes locais:</string>
    <string name="toast_login_required">É necessário fazer login pela conta do Facebook para usar a aplicação</string>
    <string name="toast_login_error">Houve um problema ao tentar entrar com o Facebook. Tente mais tarde ou entre em contato conosco pela Play Store.</string>

    <!--Strings related to advertise-->
    <string name="btn_cancel">cancelar</string>
    <string name="input_description">Descriçao</string>
    <string name="input_price">Preço</string>
    <string name="sp_event">Tipo Anuncio</string>
    <string name="input_title">Título</string>
    <string name="tv_search_terms_default">(nenhum termo definido)</string>
    <string name="tv_selling_label">Ou talvez você queira vender algo &#8230;</string>
    <string name="toast_post_ad_error">Houve um problema ao publicar o anúncio. Tente mais tarde ou entre em contato conosco pela Play Store.</string>
    <string name="toast_post_ad_ok">Seu anúncio foi publicado.</string>

    <!-- Activity titles -->
    <string name="title_activity_advertise">Anunciar</string>
    <string name="title_activity_results">Resultados da busca</string>
    <string name="title_activity_my_ads">Meus anúncios</string>
    <string name="title_activity_ad_details">Detalhes do anúncio</string>
    <string name="title_activity_settings">Configurações</string>

    <string name="tv_points_label">Classificação do anunciante:</string>
    <string name="tv_evaluate_label">Avaliar o anunciante:</string>
    <string name="bt_contact_label">Negociar</string>
    <string name="et_cell_number_label">Informe o número do celular</string>
    <string name="bt_logout_label">Sair</string>
    <string name="lobout_explanation">Desassocia o aplicativo da sua conta do Facebook neste celular.</string>
    <string name="title_activity_my_ad_details">Detalhes do meu anúncio</string>
    <string name="title_activity_recent_searches">Pesquisas recentes</string>
    <string name="title_activity_negotiation">Negociação</string>
    <string name="bt_mark_due_label">Fechar Negócio</string>
    <string name="tv_negocio_fechado">Negócio Fechado!</string>
    <string name="tv_college_label">Universidade:</string>
    <string name="greeting_welcome">Bem vind%1$s, &lt;b>&lt;big>%2$s&lt;/big>&lt;/b>!</string>
    <string name="greeting_hello">Olá, &lt;b>&lt;big>%1$s&lt;/big>&lt;/b>!</string>
    <string name="bt_trending_ads_label">Anúncios em alta</string>
    <string name="tv_trending_label">Anúncios em alta:</string>
    <string name="bt_more">Ver mais</string>
    <string name="bt_recent_label">Buscas recentes</string>
    <string name="bt_negotiating_label">Em Negociação</string>
    <string name="bt_saved_label">Anúncios salvos</string>
    <string name="tv_recent_searches_label">Pesquisas recentes neste dispositivo:</string>
    <string name="tv_recent_searches_label_none">Nenhuma pesquisas recente.</string>
    <string name="menu_item_clear_recent">Limpar recentes</string>
    <string name="tv_message_label">Enviar uma mensagem:</string>
    <string name="tv_message_hint">Escreva aqui sua mensagem...</string>
    <string name="bt_send_label">Enviar</string>
    <string name="tv_messges_header_label">Negociação do anúncio:</string>
    <string name="bt_commerce">Comércio</string>
    <string name="bt_events">Eventos</string>
    <string name="space">" "</string>
    <string name="bt_see_contact">Ver Negociações</string>
    <string name="tv_phone_label">Celular para contato:</string>
</resources>
