<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advertise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ihces.barganha.AdvertiseActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/input_title"
            android:ems="10"
            android:id="@+id/editText7"
            android:layout_gravity="center"
            android:layout_weight="1"
            tools:ignore="InefficientWeight,LabelFor,NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">
        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="insert image here"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:text="@string/input_description"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_gravity="center"
            android:layout_weight="1"
            tools:ignore="InefficientWeight,LabelFor,NestedWeights" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/input_price"
            tools:ignore="InefficientWeight,LabelFor,NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:text="@string/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:id="@+id/button4"

            android:layout_weight="1"
            tools:ignore="ButtonStyle,NestedWeights,RtlHardcoded" />

        <Button
            android:text="Anunciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:id="@+id/button5"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
    </LinearLayout>

</LinearLayout>
