<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_my_ads_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ihces.barganha.NegotiationActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

        </RelativeLayout>

        <TextView
            android:text="@string/tv_messges_header_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tv_messages_header" />

        <TextView
            android:text="title ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_messages_header"
            android:id="@+id/tv_messages_ad_title"
            android:textSize="18sp"
            android:textAlignment="center"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:text="@string/tv_phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_messages_ad_title"
            android:id="@+id/tv_phone_label"
            android:visibility="gone" />

        <TextView
            android:text="(##)#####-####"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_phone_label"
            android:id="@+id/tv_phone"
            android:textSize="18sp"
            android:textAlignment="center"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cacaca"
            android:id="@+id/item_separator"
            android:layout_below="@+id/tv_phone"
            android:layout_margin="10dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_messages"
            android:layout_above="@+id/et_message"
            android:layout_below="@+id/item_separator" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_message"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="false"
            android:layout_above="@+id/ll_buttons"
            android:background="?android:attr/editTextBackground"
            android:hint="@string/tv_message_hint"
            android:layout_margin="4dp"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/ll_buttons" >

            <Button
                android:text="@string/bt_mark_due_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/bt_make_deal" />

            <Button
                android:text="@string/bt_send_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/bt_send" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tr_due"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@android:color/holo_green_dark"
                android:padding="4dp"
                android:visibility="gone">

                <TextView
                    android:text="@string/tv_negocio_fechado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_due"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <ImageView
                    app:srcCompat="@drawable/handshake_light"
                    android:id="@+id/iv_due"
                    android:layout_height="40dp"
                    android:layout_width="50dp" />
            </TableRow>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>