<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ihces.barganha.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal">

        <TextView
            android:text="Bem vindo!"
            android:layout_width="match_parent"
            android:id="@+id/tv_greeting"
            android:textSize="18sp"
            android:textAlignment="textStart"
            android:layout_height="50dp"
            android:layout_margin="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_search_terms"
                android:layout_weight="1"
                android:hint="@string/tv_search_terms_hint"
                android:layout_marginLeft="5dp" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_search"
                android:background="@drawable/btn_pesquisar_icon"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_marginRight="5dp" />

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:layout_height="1dp" />

        <TextView
            android:text="@string/tv_selling_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_label_selling"
            android:textAllCaps="false"
            android:textStyle="normal|italic"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/btn_advertise"
            android:text="@string/btn_advertise"
            android:textColor="@android:color/white"
            android:drawableTop="@drawable/advertise_large"
            android:drawablePadding="5dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="@dimen/bt_square_large"
            android:layout_width="@dimen/bt_square_large" />

        <TableRow
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:layout_height="1dp" />

        <TextView
            android:text="@string/tv_trending_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAllCaps="false"
            android:textStyle="normal|italic"
            android:layout_marginLeft="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bt_square_mid"
                app:srcCompat="@drawable/ic_photo"
                android:id="@+id/iv_trending_1"
                android:layout_weight="1"
                android:layout_margin="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bt_square_mid"
                app:srcCompat="@drawable/ic_photo"
                android:id="@+id/iv_trending_2"
                android:layout_weight="1"
                android:layout_margin="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bt_square_mid"
                app:srcCompat="@drawable/ic_photo"
                android:id="@+id/iv_trending_3"
                android:layout_weight="1"
                android:layout_margin="5dp" />
        </LinearLayout>

        <Button
            android:text="@string/bt_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_trending_ads"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/more_small"
            android:drawablePadding="4dp" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
