<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_ad_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ihces.barganha.MyAdDetails"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="top">

        <TextView
            android:text="@string/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title_value"
            android:layout_gravity="top|left"
            tools:ignore="InefficientWeight,LabelFor,NestedWeights"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/ic_photo"
        android:id="@+id/iv_photo"
        android:layout_height="200dp"
        android:layout_weight="4"
        android:scaleType="fitCenter"
        android:adjustViewBounds="false"
        android:cropToPadding="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_description"
            android:ems="10"
            android:id="@+id/tv_description_label"
            android:layout_gravity="left"
            tools:ignore="InefficientWeight,LabelFor,NestedWeights"
            android:layout_weight="4" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque et ligula quis nunc suscipit placerat. Mauris fringilla ex vel erat."
                    android:id="@+id/tv_description_value"
                    android:layout_gravity="top|left"
                    tools:ignore="InefficientWeight,LabelFor,NestedWeights"
                    android:textSize="20sp"
                    android:elevation="1dp"
                    android:textColor="?android:attr/textColorPrimary" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_price"
            android:ems="10"
            android:id="@+id/tv_price_label"
            tools:ignore="InefficientWeight,LabelFor,NestedWeights"
            android:layout_weight="4"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="R$ 52,00"
            android:id="@+id/tv_price_value"
            android:layout_gravity="top"
            tools:ignore="InefficientWeight,LabelFor,NestedWeights"
            android:layout_weight="1"
            android:textSize="20sp"
            android:elevation="1dp"
            android:layout_marginLeft="5dp"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="visible"
        android:layout_marginTop="10dp">

        <Button
            android:text="@string/bt_mark_due_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_mark_due"
            android:layout_weight="1"
            android:visibility="visible" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tr_due"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@android:color/holo_green_dark"
            android:padding="4dp"
            android:visibility="gone">

            <TextView
                android:text="@string/tv_negocio_fechado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_due"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="24sp" />

            <ImageView
                app:srcCompat="@drawable/handshake_light"
                android:id="@+id/iv_due"
                android:layout_height="40dp"
                android:layout_width="50dp" />
        </TableRow>

    </LinearLayout>

</LinearLayout>
